# bs

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  compile_flags.txt
.github/workflows/: build.yml  ci.yml
docs/: examples.html  examples.md  generate.bs  hello.html  hello.md  index.html  index.md  script.js  stdlib.html  stdlib.md  style.css  tutorial.html  tutorial.md
editor/vim/: README.md
examples/: game-of-life.bs  shell.bs
examples/cat/: README.md  cat.bs  cat.bsx
examples/flappy_bird/: README.md  flappy_bird.bs  raylib.c
examples/game_of_life/: GameOfLife.bs  README.md  game_of_life_raylib.bs  game_of_life_tui.bs  raylib.c
examples/grep/: README.md  grep.bs  grep.bsx
examples/ls/: README.md  ls.bs
examples/rule110/: README.md  rule110.bs
examples/shell/: README.md  shell.bs  shell.bsx
examples/tasks/: README.md  tasks.bs
include/bs/: basic.h  bs.h  compiler.h  core.h  debug.h  hash.h  lexer.h  map.h  object.h  op.h  regex.h  token.h  value.h  vm.h
src/: basic.c  basic.h  bs.c  bs.h  bsdoc.c  chunk.c  chunk.h  compiler.c  compiler.h  debug.c  debug.h  hash.c  hash.h  lexer.c  lexer.h  main.c  memory.c  object.c  object.h  op.c  op.h  token.c  token.h  value.c  value.h  vm.c  vm.h
src/bs/: basic.c  bs.c  compiler.c  core.c  debug.c  hash.c  lexer.c  map.c  object.c  op.c  token.c  value.c  vm.c
tests/: rere.py  test.list  test.list.bi
tests/arithmetics/: error_invalid_digit.bs  error_invalid_digit.bsx  error_invalid_hex_digit.bs  error_invalid_hex_digit.bsx  main.bs  main.bsx
tests/arrays/: assign_out_of_bounds.bs  assign_out_of_bounds.bsx  compare_sort.bs  error_index_out_of_bounds.bs  error_index_out_of_bounds.bsx  error_invalid_index.bs  error_invalid_index.bsx  error_invalid_index_assign.bs  error_invalid_index_assign.bsx  error_invalid_index_const.bs  error_invalid_index_const.bsx  error_invalid_index_const_assign.bs  error_invalid_index_const_assign.bsx  error_remove_out_of_bounds.bs  main.bs  main.bsx  table_str_compare_sort.bs
tests/assert/: assert.bs  with_message.bs
tests/assignment/: join.bs  join.bsx  key_shorthand.bs  key_shorthand.bsx  main.bs  main.bsx
tests/builtin_methods/: array.bs  array.bsx  error_undefined_array.bs  error_undefined_array.bsx  error_undefined_number.bs  error_undefined_number.bsx  error_undefined_str.bs  error_undefined_str.bsx  number.bs  number.bsx  string.bs  string.bsx  table.bs  table.bsx
tests/closures/: loops.bs  loops.bsx  main.bs  main.bsx
tests/comparisons/: main.bs  main.bsx
tests/conditions/: invocation_optimization_guard.bs  main.bs  main.bsx  match.bs
tests/const/: error_cannot_assign_class.bs  error_cannot_assign_function.bs  error_cannot_assign_global.bs  error_cannot_assign_global_class.bs  error_cannot_assign_global_fn.bs  error_cannot_assign_local_in_fn.bs  error_cannot_assign_upvalue.bs  error_cannot_assign_upvalue_nested.bs  main.bs  public_base.bs
tests/containers/: error_in_operator_invalid_container.bs  error_in_operator_invalid_container.bsx  error_in_operator_invalid_index.bs  error_in_operator_invalid_index.bsx  error_invalid_container.bs  error_invalid_container.bsx  error_invalid_container_assign.bs  error_invalid_container_assign.bsx  error_invalid_container_const.bs  error_invalid_container_const.bsx  error_invalid_container_const_assign.bs  error_invalid_container_const_assign.bsx  error_undefined_c_instance_property.bs  error_undefined_c_instance_property.bsx  error_undefined_instance_property.bs  error_undefined_instance_property.bsx  error_undefined_table_key.bs  error_undefined_table_key.bsx  in_operator.bs  in_operator.bsx
tests/core/: array.bs  array.bsx  ascii.bs  ascii.bsx  bit.bs  bit.bsx  error_expected_function.bs  error_expected_function.bsx  math.bs  math.bsx  math_range_indefinite_ascending_guard.bs  math_range_indefinite_descending_guard.bs  meta.bs  meta_call_error.bs  meta_eval_runtime_error.bs  os_process_capture_stderr.bs  os_process_capture_stderr.bsx  os_process_capture_stdin.bs  os_process_capture_stdin.bsx  os_process_capture_stdout.bs  os_process_capture_stdout.bsx  os_process_with_args.bs  os_process_with_args.bsx  readdir.bs  regex.bs  regex.bsx  string.bs  string.bsx  table.bs  table.bsx
tests/delete/: array.bs  array_invalid_index.bs  array_out_of_range_index.bs  error_cannot_delete_super.bs  error_cannot_delete_super.bsx  error_expected_index_expression.bs  error_expected_index_expression.bsx  error_invalid_container.bs  error_invalid_container.bsx  error_invalid_instance_property.bs  error_invalid_instance_property.bsx  error_invalid_table_key.bs  error_invalid_table_key.bsx  instance_property.bs  instance_property.bsx  table.bs  table.bsx
tests/executables/: echo_args.c  echo_stdin.c
tests/extended/: common.bs  common_extended.bsx  error_type_name_extended.bs  error_type_name_extended.bsx  error_type_name_normal.bs  error_type_name_normal.bsx  main.bs  main.bsx
tests/ffi/: addsub.c  error_invalid_library.bs  error_invalid_library.bsx  main.bs  main.bsx
tests/functions/: defer.bs  error_field_define_constant.bs  error_invalid_arity.bs  error_invalid_arity.bsx  error_native_stack_trace.bs  error_native_stack_trace.bsx  error_stack_trace.bs  error_stack_trace.bsx  field_define.bs  lambda.bs  lambda.bsx  main.bs  main.bsx  shorthand.bs  shorthand.bsx  spread.bs  variadics.bs
tests/import/: common.bs  error_could_not_open.bs  error_could_not_open.bsx  error_expected_string.bs  error_expected_string.bsx  from_file_dirname.bs  indirect_main_module.bs  indirect_main_module.bsx  main.bs  main.bsx  main_module.bs  main_module.bsx  only_once.bs  only_once.bsx
tests/instanceof/: main.bs
tests/invokation/: asi_esception_dot.bs  chain.bs  chain.bsx  error_call_invalid_container.bs  error_call_invalid_container.bsx  error_call_invalid_key.bs  error_call_invalid_key.bsx  error_invoked_body.bs  error_invoked_body.bsx  error_key_call_argument_location.bs  error_key_call_argument_location.bsx  error_key_call_invalid_function.bs  error_key_call_invalid_function.bsx  key_call.bs  (+21 more)
(+87 files in other folders)
